# vec-ecs

./: Cargo.toml  LICENSE-MIT  README.md  tmp.txt
crates/vec-ecs-macro/: Cargo.toml
crates/vec-ecs-macro/src/: lib.rs
src/: comp_iter.rs  comp_vec.rs  entity.rs  entity_handle.rs  lending.rs  lib.rs  main.rs  world.rs
tests/: lifetime_borrows.rs  test.rs  test2.rs  test_add_remove.rs
vec-ecs-macro/: Cargo.toml
vec-ecs-macro/src/: lib.rs
